Working on my home page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
+    <title>Clothes Designing</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <!--
@@ -17,7 +17,17 @@
       <a href="/page2.html">Other page</a>
     </nav>
     <main>
-      <h1>Jose's page</h1>
+      <h1>Clothes Designing</h1>
+      <p>In this website youll be able to design your clothe</p>and 
+<ul>
+  <li>Sweater</li>
+  <li>Pants</li>
+  <li>Shirt</li>
+  <dt></dt>
+</ul>
     </main>
+    <div></div>
+
   </body>
 </html>
+<meta>
