--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
+      <a href="./pages/page2.html">Other page</a>
     </nav>
     <main>
       <h1>Clothes Designing</h1>
       <p>In this website youll be able to design your clothe</p>and 
+      <a href="https://www.prodirectsport.us/">Link</a>
+
 <ul>
   <li>Sweater</li>
   <li>Pants</li>
