Color changing mau

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
     </nav>
     <main>
       <h1>Clothes Designing</h1>
-      <p>In this website youll be able to design your clothe</p>and 
+      <p>In this website youll be able to view lots of clothes that you might be interested</p> 
       <a href="https://www.prodirectsport.us/">Link</a>
 
 <ul>
   <li>Sweater</li>
   <li>Pants</li>
-  <li>Shirt</li>
+  <li>Shirts</li> 
+  <a href="https://www.urbanoutfitters.com/mens-tops?category_button=1">Link</a>
   <dt></dt>
 </ul>
     </main>
