--- a/pages/page2.html
+++ b/pages/page2.html
@@ -13,7 +13,14 @@
       <a href="/page2.html" aria-current="page">Other page</a>
     </nav>
     <main>
-      <h1>My other page</h1>
+    
+      <h1>Pants</h1>
+      <h1>In here youll have a variety of pants to pick, all sorts of styles.</h1>
+
     </main>
+    <ul>
+      <li>Pants</li>
+      <a href="https://www.prodirectsport.us/">Link</a>
+
   </body>
 </html>
