--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a href="./pages/page2.html">Other page</a>
+      <a href="./page2.html">Other page</a>
     </nav>
     <main>
       <h1>Clothes Designing</h1>
