footer contac us

--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,9 @@
       <a href="/page2.html" aria-current="page">Other page</a>
     </nav>
     <main>
-      <h1>In here youll have a variety of pants to pick, all sorts of styles.</h1>
+      <h1>
+        In here youll have a variety of pants to pick, all sorts of styles.
+      </h1>
       <div class="parent">
         <div class="child">Clothes</div>
         <div class="child">Shirts</div>
