Second page adjustemts and added pictures

--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Other page</title>
+    <title>Women</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
@@ -10,21 +10,81 @@
   <body>
     <nav>
       <a href="../../index.html">Home</a>
-      <a href="/page2.html" aria-current="page">Other page</a>
+      <a href="/page2.html" aria-current="page">Womens</a>
     </nav>
     <main>
       <h1>
-        In here youll have a variety of pants to pick, all sorts of styles.
+        <header class="hero">
+          <h1>JC Streetwear Clothes Designing</h1>
+          <p>
+            Explore the latest trends in hoodies, pants, and shirts, for women
+             in which you can customize your clothes with any designs and
+            styles that you will love.
+          </p>
       </h1>
-      <div class="parent">
-        <div class="child">Clothes</div>
-        <div class="child">Shirts</div>
-        <div class="child">Hoodies</div>
-      </div>
+    </header>
+
+    <section class="gallery">
+      <article class="card">
+        <img
+          src="https://files.tapstitch.com/material/style/item_image/image-RP0006%20(4)-v1729246063.png?x-oss-process=style/hugepod-product-list-webp"
+          alt="Cool streetwear hoodie"
+        />
+        <h2>Hoodies</h2>
+        <p>Comfort meets style with our latest hoodies.</p>
+        <a
+          href="https://www.tapstitch.com/collections/hoodies"
+          target="_blank"
+          rel="noopener"
+        >
+          Shop Hoodies
+        </a>
+      </article>
+
+      <article class="card">
+        <img
+          src="https://files.tapstitch.com/material/style/item_image/style/item_image/20250919/image-v1758261983-WK0003-F-(1).jpg?x-oss-process=style/hugepod-product-webp"
+          alt="Trendy streetwear pants"
+        />
+        <h2>Pants</h2>
+        <p>Perfect pants for your everyday look.</p>
+        <a
+          href="https://www.tapstitch.com/custom/rk0013-reflection-striped-straight-leg-sweatpants?bsId=1415652648560087040&category1Slug=all&isDeliveryToUs=0"
+          target="_blank"
+          rel="noopener"
+        >
+          Shop Pants
+        </a>
+      </article>
+
+      <article class="card">
+        <img
+          src="https://files.tapstitch.com/material/style/item_image/image-WT0029%20(4)-v1759126791.jpg?x-oss-process=style/hugepod-product-list-webp"
+          alt="Stylish streetwear shirts"
+        />
+        <h2>Shirts</h2>
+        <p>Fresh shirts to complete your outfit.</p>
+        <a
+          href="https://www.tapstitch.com/custom/ru0130-sorona-quick-dry-cooling-t-shirt?bsId=1347158360843235328&category1Slug=all&isDeliveryToUs=0"
+          target="_blank"
+          rel="noopener"
+        >
+          Shop Shirts
+        </a>
+      </article>
+    </section>
+  </main>
+</body>
+<div class="footer">
+  contact us
+  <div class="footerLinks">
+    <a href="https://josecoralrps@gmail.com" target="_blank">Email</a>
+  </div>                                                                                                                                                                                   
+</div>
+</html>
     </main>
     <ul>
-      <li>Pants</li>
-      <a href="https://www.prodirectsport.us/">Link</a>
+      <a href= ></a>
     </ul>
   </body>
 </html>
