--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a href="./page2.html">Other page</a>
+      <a href="./page2.html">Womens</a>
     </nav>
 
     <main>
       <header class="hero">
-        <h1>Streetwear Clothes Designing</h1>
+        <h1>JC Streetwear Clothes Designing</h1>
         <p>
-          Explore the latest trends in hoodies, pants, and shirts, for men and
-          women in which you can customize your clothes with any designs and
+          Explore the latest trends in hoodies, pants, and shirts, for men
+           in which you can customize your clothes with any designs and
           styles that you will love.
         </p>
       </header>
@@ -77,6 +77,7 @@
     contact us
     <div class="footerLinks">
       <a href="https://josecoralrps@gmail.com" target="_blank">Email us</a>
-    </div>
+    </div>                                                                                                                                                                                   
   </div>
 </html>
+                         
