fixing code and pluggin icon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h2>Pants</h2>
           <p>Perfect pants for your everyday look.</p>
           <a
-            href="https://www.tapstitch.com/custom/rk0013-reflection-striped-straight-leg-sweatpants?bsId=1415652648560087040&category1Slug=all&isDeliveryToUs=0"
+            href="https://www.tapstitch.com/custom/rk0013-reflection-striped-straight-leg-sweatpants?bsId=1415652648560087040&category1Slug=men-clothes&isDeliveryToUs=0"
             target="_blank"
             rel="noopener"
           >
