--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,7 @@
         <h2>Hoodies</h2>
         <p>Comfort meets style with our latest hoodies.</p>
         <a
-          href="https://www.tapstitch.com/collections/hoodies"
+          href="https://www.tapstitch.com/custom/rp0006-cropped-half-zip-hoodie?bsId=1316084454565068800&category1Slug=women-clothes&isDeliveryToUs=0"
           target="_blank"
           rel="noopener"
         >
@@ -49,7 +49,7 @@
         <h2>Pants</h2>
         <p>Perfect pants for your everyday look.</p>
         <a
-          href="https://www.tapstitch.com/custom/rk0013-reflection-striped-straight-leg-sweatpants?bsId=1415652648560087040&category1Slug=all&isDeliveryToUs=0"
+          href="https://www.tapstitch.com/custom/wk0003-essential-drawstring-straight-leg-sweatpants?bsId=1417840029912510464&category1Slug=women-clothes&isDeliveryToUs=0"
           target="_blank"
           rel="noopener"
         >
@@ -65,7 +65,7 @@
         <h2>Shirts</h2>
         <p>Fresh shirts to complete your outfit.</p>
         <a
-          href="https://www.tapstitch.com/custom/ru0130-sorona-quick-dry-cooling-t-shirt?bsId=1347158360843235328&category1Slug=all&isDeliveryToUs=0"
+          href="https://www.tapstitch.com/custom/wt0029-contrast-stripes-bodycon-raglan-sleeve-t-shirt?bsId=1420768911548428288&category1Slug=women-clothes&isDeliveryToUs=0"
           target="_blank"
           rel="noopener"
         >
