about me and new code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
       <a href="/" aria-current="page">Home</a>
       <a href="./page2.html">Womens</a>
+      <a href="./page3.html">About me</a>
     </nav>
 
     <main>
