--- a/page3.html
+++ b/page3.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="./page2.html">Womens</a>
-    </nav>
+    <nav><a href="../../index.html">Home</a>
+      <a href="/page3.html" aria-current="page">page3</a>
 
     <main>
+      <form name="myform">
+        <input type="text">
+
+      </form>
      
       </header>
 
