about me extra credit

--- a/page3.html
+++ b/page3.html
@@ -81,7 +81,9 @@
                 const myform="this is a string"
                 console.log(myform)
                 const mau=document.getElementById("lastname").value;
-                alert("Thanks for submitting. " + mau) 
+                const ball=document.getElementById("firstname").value;
+                alert("Thanks for submitting, " + ball+" " + mau) 
+                
               }
             </script>
           </section>
